# alien_invasion

./: .gitignore  Makefile  README.md  alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  pyproject.toml  scoreboard.py  settings.py  ship.py
alien_invasion/: alien.py  alien_invasion.py  boost.py  bullet.py  button.py  engine.py  game_stats.py  scoreboard.py  settings.py  ship.py
alien_invasion/scripts/: ai_game.py
