[tool.poetry]
name = "alien-invasion"
version = "0.9"
description = "Game based on the original Atari game Space Invaders. Shoot the aliens to defend the Earth and score as much as you can to beat the all-time high score."
classifiers = [
    "Topic :: Games/Entertainment :: Arcade"
]
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
repository = "https://github.com/DREU007/alien-invasion"
readme = "README.md"
packages = [{include = "alien_invasion"}]

[tool.poetry.scripts]
alien-invasion = "alien_invasion.scripts.ai_game:main"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
